added stylesheet and update html

--- a/v_bio.html
+++ b/v_bio.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<title>Veronica Diaz | Bio</title>
-		<link src="">
+		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
+		<link rel="stylesheet" type="text/css" src="style.css" />
 	</head>
 	<body>
 		<h1>Student Bio</h1>
 		<h2>Veronica Diaz</h2>
-		<img src=" " alt=" " />
+		<img src="14324354_10154575075710956_8675250871850295550_o.jpg
+" alt="selfie" style="height: 300px; width: auto;"/>
 		<p>Duis et eros at ipsum congue imperdiet ut ut justo. Aenean bibendum ut quam at interdum. Nam sollicitudin quam eu justo sagittis, at congue ligula viverra. Suspendisse potenti. Proin nec sem lacus. Duis ut diam gravida, ullamcorper enim fermentum, hendrerit erat. Pellentesque sed nulla a nulla blandit tristique in ut arcu.</p>
 		<h3>Contact Info</h3>
 		<ul>
@@ -18,10 +20,3 @@
 	</body>
 </html>
 
-<style>
-	body {margin: auto 0; text-align: center;}
-	img {border: none; text-align: center; height: 50%; width: auto;}
-	.text-center {text-align: center;}
-	ul {list-style-type: none;}
-	table {text-align: center;}
-</style>
